fix:add css code to make the program look good

--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-Database=mongodb+srv://xayitbekmirsoatov:200311@cluster0.eh5fmal.mongodb.net/test
+DB=mongodb+srv://xayitbekmirsoatov:200311@cluster0.eh5fmal.mongodb.net/test
 PORT=5000
