--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "node app.js",
-    "add": "node public/db/import-dev-data.js --import",
-    "delete": "node public/db/import-dev-data.js --delete"
-
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
